using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace TP_Heritage_exo2_
{
    class LaveVaisselle:AppareilANettoyer
    {
    }
}
